--- a/roles/common/tasks/mysql.yml
+++ b/roles/common/tasks/mysql.yml
@@ -1,5 +1,6 @@
 - name:   Configure MySQL
   become: yes
+  tags:   mysql
   ini_file:
     path:    "{{ p.mysql.config_path }}"
     section: mysqld
