--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -2,6 +2,7 @@
 - import_tasks: mc.yml
 - import_tasks: ssh.yml
 - import_tasks: git.yml
+- import_tasks: nginx.yml
 - import_tasks: mysql.yml
 - import_tasks: php.yml
 - import_tasks: im.yml
