--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -5,6 +5,7 @@
 - import_tasks: nginx.yml
 - import_tasks: mysql.yml
 - import_tasks: mongodb.yml
+- import_tasks: exim.yml
 - import_tasks: php.yml
 - import_tasks: im.yml
 - import_tasks: nodejs.yml
