--- a/roles/common/tasks/mc.yml
+++ b/roles/common/tasks/mc.yml
@@ -11,15 +11,17 @@
       ini_file:
         path:    ~/.config/mc/ini
         section: 'Midnight-Commander'
-        option:  "{{ item.option }}"
+        option:  "{{ item.key }}"
         value:   "{{ item.value }}"
-      loop:
-        - {option: 'auto_save_setup',                    value: 'true'}
-        - {option: 'use_internal_view',                  value: 'true'}
-        - {option: 'editor_return_does_auto_indent',     value: 'true'}
-        - {option: 'editor_fake_half_tabs',              value: 'false'}
-        - {option: 'editor_cursor_after_inserted_block', value: 'true'}
-        - {option: 'editor_ask_filename_before_edit',    value: 'true'}
+      loop: "{{ data | dict2items }}"
+      vars:
+        data:
+          - auto_save_setup:                    'true'
+          - use_internal_view:                  'true'
+          - editor_return_does_auto_indent:     'true'
+          - editor_fake_half_tabs:              'false'
+          - editor_cursor_after_inserted_block: 'true'
+          - editor_ask_filename_before_edit:    'true'
 
     - name: 'Configure MC ini [Panels]'
       ini_file:
@@ -32,15 +34,15 @@
       lineinfile:
         create: yes
         path:   ~/.config/mc/hotlist
-        regexp: '^ENTRY "{{ item.url }}"'
-        line:   'ENTRY "{{ item.url }}" URL "{{ item.url }}"'
+        regexp: '^ENTRY "{{ item }}"'
+        line:   'ENTRY "{{ item }}" URL "{{ item }}"'
       loop:
-        - {url: '/var/www/'}
-        - {url: '/etc/'}
-        - {url: '/etc/php/'}
-        - {url: '/etc/apache2/'}
-        - {url: '/etc/nginx/'}
-        - {url: '/etc/mysql/'}
-        - {url: '/etc/pure-ftpd/'}
-        - {url: '/var/log/'}
-        - {url: '/tmp/'}
+        - '/var/www/'
+        - '/etc/'
+        - '/etc/php/'
+        - '/etc/apache2/'
+        - '/etc/nginx/'
+        - '/etc/mysql/'
+        - '/etc/pure-ftpd/'
+        - '/var/log/'
+        - '/tmp/'
