--- a/roles/common/tasks/exim.yml
+++ b/roles/common/tasks/exim.yml
@@ -7,6 +7,7 @@
         name:    sendmail
         state:   stopped
         enabled: no
+      ignore_errors: yes
 
     - name: Install Exim
       apt:
