Починка ошибок с loop over dictionary

--- a/roles/common/tasks/redis.yml
+++ b/roles/common/tasks/redis.yml
@@ -16,6 +16,6 @@
       loop: "{{ data | dict2items }}"
       vars:
         data:
-          - save:             '""'
-          - maxmemory:        "{{ p.redis.maxmemory }}"
-          - maxmemory-policy: allkeys-lfu
+          save:             '""'
+          maxmemory:        "{{ p.redis.maxmemory }}"
+          maxmemory-policy: allkeys-lfu
