--- a/roles/common/tasks/exim.yml
+++ b/roles/common/tasks/exim.yml
@@ -23,19 +23,19 @@
       loop: "{{ data | dict2items }}"
       vars:
         data:
-          - dc_eximconfig_configtype: 'internet'
-          - dc_other_hostnames:       ''
-          - dc_local_interfaces:      '127.0.0.1 ; ::1'
-          - dc_readhost:              ''
-          - dc_relay_domains:         ''
-          - dc_minimaldns:            'false'
-          - dc_relay_nets:            ''
-          - dc_smarthost:             ''
-          - CFILEMODE:                '644'
-          - dc_use_split_config:      'false'
-          - dc_hide_mailname:         ''
-          - dc_mailname_in_oh:        'true'
-          - dc_localdelivery:         'mail_spool'
+          dc_eximconfig_configtype: 'internet'
+          dc_other_hostnames:       ''
+          dc_local_interfaces:      '127.0.0.1 ; ::1'
+          dc_readhost:              ''
+          dc_relay_domains:         ''
+          dc_minimaldns:            'false'
+          dc_relay_nets:            ''
+          dc_smarthost:             ''
+          CFILEMODE:                '644'
+          dc_use_split_config:      'false'
+          dc_hide_mailname:         ''
+          dc_mailname_in_oh:        'true'
+          dc_localdelivery:         'mail_spool'
 
     - name: Enable Exim
       service:
