--- a/roles/common/tasks/mc.yml
+++ b/roles/common/tasks/mc.yml
@@ -16,12 +16,12 @@
       loop: "{{ data | dict2items }}"
       vars:
         data:
-          - auto_save_setup:                    'true'
-          - use_internal_view:                  'true'
-          - editor_return_does_auto_indent:     'true'
-          - editor_fake_half_tabs:              'false'
-          - editor_cursor_after_inserted_block: 'true'
-          - editor_ask_filename_before_edit:    'true'
+          auto_save_setup:                    'true'
+          use_internal_view:                  'true'
+          editor_return_does_auto_indent:     'true'
+          editor_fake_half_tabs:              'false'
+          editor_cursor_after_inserted_block: 'true'
+          editor_ask_filename_before_edit:    'true'
 
     - name: 'Configure MC ini [Panels]'
       ini_file:
