--- a/roles/common/tasks/certbot.yml
+++ b/roles/common/tasks/certbot.yml
@@ -1,6 +1,6 @@
 - name:   Certbot
   become: yes
-  tags:   [never, certbot]
+  tags:   certbot
   block:
     - name: Install certbot with python 3
       when: p.certbot.install
