--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -56,6 +56,9 @@ p:
     #- {name: dude, gid: 1007}
   users: []
     #- {name: dude, uid: 1007, group: dude, home: /home/dude/}
+  logrotate: []
+    #Настройки вращения логов
+    #- {src: nginx, dest: nginx, paths: '/var/log/nginx/*.log', rotate: 14, create: '0644 www-data adm'}
   jenkins:
     server_name: jenkins.example.com
   duplicati:
