--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,6 +13,7 @@
 - import_tasks: nodejs.yml
 - import_tasks: groups.yml
 - import_tasks: users.yml
+- import_tasks: logrotate.yml
 - import_tasks: pure-ftpd.yml
 - import_tasks: certbot.yml
 - import_tasks: jenkins.yml
