--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -16,5 +16,6 @@
 - import_tasks: logrotate.yml
 - import_tasks: pure-ftpd.yml
 - import_tasks: certbot.yml
+- import_tasks: certget.yml
 - import_tasks: jenkins.yml
 - import_tasks: duplicati.yml
