--- a/tasks/certbot.yml
+++ b/tasks/certbot.yml
@@ -51,6 +51,11 @@
           certbot_regru:dns_username={{ p.certbot.regru.login }}
           certbot_regru:dns_password={{ p.certbot.regru.password }}
 
+    - name: Create directory for dhparam.pem
+      file:
+        path:  /etc/nginx/ssl/
+        state: directory
+
     - name:    Generate Nginx dhparam.pem
       command: openssl dhparam -out /etc/nginx/ssl/dhparam.pem 2048
       args:
