Ставим не только python-xml, но и python3-xml - потому что второго пузона на системе может и не быть

--- a/tasks/basic.yml
+++ b/tasks/basic.yml
@@ -2,5 +2,5 @@
   become: yes
   tags:   basic
   apt:
-    name: [sudo, man, gnupg, acl, ftp, curl, ntp, screen, htop, vim, python-lxml]
+    name: [sudo, man, gnupg, acl, ftp, curl, ntp, screen, htop, vim, python-lxml, python3-lxml]
     state: present
