--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,7 @@
 - import_tasks: basic.yml
 - import_tasks: mc.yml
 - import_tasks: ssh.yml
+- import_tasks: ufw.yml
 - import_tasks: git.yml
 - import_tasks: acl.yml
 - import_tasks: nginx.yml
